Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Go/DriverExamples/wrappers/TimeFuncDll.h

// Converts a time in ds50TAI to a time in ds50UTC using timing constants records in memory. 
// If no timing constants records were loaded, ds50TAI and ds50UTC are the same. 
// Partial days may be returned.
double TAIToUTC(double ds50TAI);
// Converts a time in ds50TAI to a time in ds50UT1 using timing constants records in memory. 
// If no timing constants records were loaded, ds50TAI and ds50UT1 are the same. 
// Partial days may be returned.
double TAIToUT1(double ds50TAI);
// Converts a year and a number of days to a time in ds50UTC. 
// Partial days may be returned.
double YrDaysToUTC(int year, double dayOfYear);
// Converts a time in ds50UTC to a year and day of year.
// The input ds50UTC must be greater than 2192.0, which corresponds to a time later than 1st Jan 1956. Any input value less than or equal to 2192.0 will yield Year=1956, Day=1.0.
void UTCToYrDays(double ds50UTC, int* year, double* dayOfYear);
// Converts a set of time components (year, day of year, hour, minute, second) to a time in ds50UTC. 
// Partial days may be returned.
// See "TimeComps2ToUTC" for a function which takes a month and day instead of a day of year value.
double TimeComps1ToUTC(int year, int dayOfYear, int hh, int mm, double sss);
// Converts a time in ds50UTC to its individual components (year, day of year, hour, minute, second).
// See "TimeComps1ToUTC" for an example.
// The input ds50UTC must be greater than 2192.0, which corresponds to a time later than 1st Jan 1956. Any input value less than or equal to 2192.0 will be reset to that value.
void UTCToTimeComps1(double ds50UTC, int* year, int* dayOfYear, int* hh, int* mm, double* sss);
// Converts a set of time components (year, month, day of month, hour, minute, second) to a time in ds50UTC. 
// Partial days may be returned.
// See "TimeComps1ToUTC" for a function which takes a day of year value instead of a month and day.
double TimeComps2ToUTC(int year, int mon, int dayOfMonth, int hh, int mm, double sss);
// Converts a time in ds50UTC to its individual components (year, month, day of month, hour, minute, second).
// See "TimeComps1ToUTC" for an example.
// The input ds50UTC must be greater than 2192.0, which corresponds to a time later than 1st Jan 1956. Any input value less than or equal to 2192.0 will be reset to that value.
void UTCToTimeComps2(double ds50UTC, int* year, int* month, int* dayOfMonth, int* hh, int* mm, double* sss);
// Computes right ascension of Greenwich at the specified time in ds50UT1. 
// The Fk constants as you currently have them set up in EnvConst.dll are used.
// EnvConst.dll is not marked as a direct dependency of TimeFunc.dll. However, it obviously must be loaded in order to be able to use this function since you must first obtain a handle via the EnvGetFkPtr() function.
double ThetaGrnwch(double ds50UT1, long lenvFk);
// Computes right ascension of Greenwich at the specified time in ds50UT1 using the Fourth Fundamental Catalogue (FK4).
// There is no need to load or initialize EnvConst.dll when computing right ascension using this function.
double ThetaGrnwchFK4(double ds50UT1);
// Computes right ascension of Greenwich at the specified time in ds50UT1 using the Fifth Fundamental Catalogue (FK5).
// There is no need to load or initialize EnvConst.dll when computing right ascension using this function.
double ThetaGrnwchFK5(double ds50UT1);
// This function is intended for future use.  No information is currently available.
// This function is intended for future use.  No information is currently available.
void TimeConvFrTo(int funcIdx, double frArr[], double toArr[]);
// Returns prediction control parameters. The parameters are placed in the reference variables passed to this function.
void Get6P(int* startFrEpoch, int* stopFrEpoch, double* startTime, double* stopTime, double* interval);
// Sets prediction control parameters.
void Set6P(int startFrEpoch, int stopFrEpoch, double startTime, double stopTime, double interval);
// Returns current prediction control parameters in form of a 6P-Card string.
void Get6PCardLine(char card6PLine[512]);
// Returns the time span of the loaded timing constants - the earliest and latest of loaded timing constant records
void TConTimeSpan(int* numOfRecs, double* frTimeDs50UTC, double* toTimeDs50UTC);