Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Julia/wrappers/TimeFuncDll.jl


#############################################################################
# Converts a time in ds50TAI to a time in ds50UTC using timing constants records in memory. 
# If no timing constants records were loaded, ds50TAI and ds50UTC are the same. 
# Partial days may be returned.
function TAIToUTC(ds50TAI)
   ds50UTC = ccall( (:TAIToUTC,libname) 
     , Float64
     , (Float64,)
     , ds50TAI)
   return ds50UTC
end

#############################################################################
# Converts a time in ds50TAI to a time in ds50UT1 using timing constants records in memory. 
# If no timing constants records were loaded, ds50TAI and ds50UT1 are the same. 
# Partial days may be returned.
function TAIToUT1(ds50TAI)
   ds50UT1 = ccall( (:TAIToUT1,libname) 
     , Float64
     , (Float64,)
     , ds50TAI)
   return ds50UT1
end

#############################################################################
# Converts a year and a number of days to a time in ds50UTC. 
# Partial days may be returned.
function YrDaysToUTC(year, dayOfYear)
   ds50UTC = ccall( (:YrDaysToUTC,libname) 
     , Float64
     , (Int32
     , Float64)
     , year,dayOfYear)
   return ds50UTC
end

#############################################################################
# Converts a time in ds50UTC to a year and day of year.
# The input ds50UTC must be greater than 2192.0, which corresponds to a time later than 1st Jan 1956. Any input value less than or equal to 2192.0 will yield Year=1956, Day=1.0.
function UTCToYrDays(ds50UTC)
   year = zeros(Int32, 1)
   dayOfYear = zeros(Float64, 1)
   ccall( (:UTCToYrDays,libname) 
     , Nothing
     , (Float64
     , Ref{Int32}
     , Ref{Float64})
     , ds50UTC,year,dayOfYear)
   return Int64(year[1]), dayOfYear[1]
end

#############################################################################
# Converts a set of time components (year, day of year, hour, minute, second) to a time in ds50UTC. 
# Partial days may be returned.
# See "TimeComps2ToUTC" for a function which takes a month and day instead of a day of year value.
function TimeComps1ToUTC(year, dayOfYear, hh, mm, sss)
   ds50UTC = ccall( (:TimeComps1ToUTC,libname) 
     , Float64
     , (Int32
     , Int32
     , Int32
     , Int32
     , Float64)
     , year,dayOfYear,hh,mm,sss)
   return ds50UTC
end

#############################################################################
# Converts a time in ds50UTC to its individual components (year, day of year, hour, minute, second).
# See "TimeComps1ToUTC" for an example.
# The input ds50UTC must be greater than 2192.0, which corresponds to a time later than 1st Jan 1956. Any input value less than or equal to 2192.0 will be reset to that value.
function UTCToTimeComps1(ds50UTC)
   year = zeros(Int32, 1)
   dayOfYear = zeros(Int32, 1)
   hh = zeros(Int32, 1)
   mm = zeros(Int32, 1)
   sss = zeros(Float64, 1)
   ccall( (:UTCToTimeComps1,libname) 
     , Nothing
     , (Float64
     , Ref{Int32}
     , Ref{Int32}
     , Ref{Int32}
     , Ref{Int32}
     , Ref{Float64})
     , ds50UTC,year,dayOfYear,hh,mm,sss)
   return Int64(year[1]), Int64(dayOfYear[1]), Int64(hh[1]), Int64(mm[1]), sss[1]
end

#############################################################################
# Converts a set of time components (year, month, day of month, hour, minute, second) to a time in ds50UTC. 
# Partial days may be returned.
# See "TimeComps1ToUTC" for a function which takes a day of year value instead of a month and day.
function TimeComps2ToUTC(year, mon, dayOfMonth, hh, mm, sss)
   ds50UTC = ccall( (:TimeComps2ToUTC,libname) 
     , Float64
     , (Int32
     , Int32
     , Int32
     , Int32
     , Int32
     , Float64)
     , year,mon,dayOfMonth,hh,mm,sss)
   return ds50UTC
end

#############################################################################
# Converts a time in ds50UTC to its individual components (year, month, day of month, hour, minute, second).
# See "TimeComps1ToUTC" for an example.
# The input ds50UTC must be greater than 2192.0, which corresponds to a time later than 1st Jan 1956. Any input value less than or equal to 2192.0 will be reset to that value.
function UTCToTimeComps2(ds50UTC)
   year = zeros(Int32, 1)
   month = zeros(Int32, 1)
   dayOfMonth = zeros(Int32, 1)
   hh = zeros(Int32, 1)
   mm = zeros(Int32, 1)
   sss = zeros(Float64, 1)
   ccall( (:UTCToTimeComps2,libname) 
     , Nothing
     , (Float64
     , Ref{Int32}
     , Ref{Int32}
     , Ref{Int32}
     , Ref{Int32}
     , Ref{Int32}
     , Ref{Float64})
     , ds50UTC,year,month,dayOfMonth,hh,mm,sss)
   return Int64(year[1]), Int64(month[1]), Int64(dayOfMonth[1]), Int64(hh[1]), Int64(mm[1]), sss[1]
end

#############################################################################
# Computes right ascension of Greenwich at the specified time in ds50UT1. 
# The Fk constants as you currently have them set up in EnvConst.dll are used.
# EnvConst.dll is not marked as a direct dependency of TimeFunc.dll. However, it obviously must be loaded in order to be able to use this function since you must first obtain a handle via the EnvGetFkPtr() function.
function ThetaGrnwch(ds50UT1, lenvFk)
   thetaG = ccall( (:ThetaGrnwch,libname) 
     , Float64
     , (Float64
     , Int64)
     , ds50UT1,lenvFk)
   return thetaG
end

#############################################################################
# Computes right ascension of Greenwich at the specified time in ds50UT1 using the Fourth Fundamental Catalogue (FK4).
# There is no need to load or initialize EnvConst.dll when computing right ascension using this function.
function ThetaGrnwchFK4(ds50UT1)
   thetaG = ccall( (:ThetaGrnwchFK4,libname) 
     , Float64
     , (Float64,)
     , ds50UT1)
   return thetaG
end

#############################################################################
# Computes right ascension of Greenwich at the specified time in ds50UT1 using the Fifth Fundamental Catalogue (FK5).
# There is no need to load or initialize EnvConst.dll when computing right ascension using this function.
function ThetaGrnwchFK5(ds50UT1)
   thetaG = ccall( (:ThetaGrnwchFK5,libname) 
     , Float64
     , (Float64,)
     , ds50UT1)
   return thetaG
end

#############################################################################
# This function is intended for future use.  No information is currently available.
# This function is intended for future use.  No information is currently available.
function TimeConvFrTo(funcIdx, frArr, size_toArr)
   toArr = zeros(Float64, size_toArr)
   ccall( (:TimeConvFrTo,libname) 
     , Nothing
     , (Int32
     , Ref{Float64}
     , Ref{Float64})
     , funcIdx,frArr,toArr)
   return toArr
end

#############################################################################
# Returns prediction control parameters. The parameters are placed in the reference variables passed to this function.
function Get6P()
   startFrEpoch = zeros(Int32, 1)
   stopFrEpoch = zeros(Int32, 1)
   startTime = zeros(Float64, 1)
   stopTime = zeros(Float64, 1)
   interval = zeros(Float64, 1)
   ccall( (:Get6P,libname) 
     , Nothing
     , (Ref{Int32}
     , Ref{Int32}
     , Ref{Float64}
     , Ref{Float64}
     , Ref{Float64})
     , startFrEpoch,stopFrEpoch,startTime,stopTime,interval)
   return Int64(startFrEpoch[1]), Int64(stopFrEpoch[1]), startTime[1], stopTime[1], interval[1]
end

#############################################################################
# Sets prediction control parameters.
function Set6P(startFrEpoch, stopFrEpoch, startTime, stopTime, interval)
   ccall( (:Set6P,libname) 
     , Nothing
     , (Int32
     , Int32
     , Float64
     , Float64
     , Float64)
     , startFrEpoch,stopFrEpoch,startTime,stopTime,interval)
end

#############################################################################
# Returns current prediction control parameters in form of a 6P-Card string.
function Get6PCardLine()
   card6PLine = " "^512
   ccall( (:Get6PCardLine,libname) 
     , Nothing
     , (Cstring,)
     , card6PLine)
   return card6PLine
end

#############################################################################
# Returns the time span of the loaded timing constants - the earliest and latest of loaded timing constant records
function TConTimeSpan()
   numOfRecs = zeros(Int32, 1)
   frTimeDs50UTC = zeros(Float64, 1)
   toTimeDs50UTC = zeros(Float64, 1)
   ccall( (:TConTimeSpan,libname) 
     , Nothing
     , (Ref{Int32}
     , Ref{Float64}
     , Ref{Float64})
     , numOfRecs,frTimeDs50UTC,toTimeDs50UTC)
   return Int64(numOfRecs[1]), frTimeDs50UTC[1], toTimeDs50UTC[1]
end

#############################################################################

end #of module TimeFuncDll
# ========================= End of auto generated code ==========================
